--- a/GymTracker/Base.lproj/Main.storyboard
+++ b/GymTracker/Base.lproj/Main.storyboard
@@ -302,7 +302,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" action="showDetailViewController:sender:" id="dvv-34-GYR"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="dvv-34-GYR"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ES4-nf-4fc" userLabel="First Responder" sceneMemberID="firstResponder"/>
